# ocabot

./: .gitignore  .merlin  .ocamlinit  LICENSE  Makefile  README.md  _tags  ocabot.opam  opam  start.sh
.github/workflows/: main.yml
src/: changelog_db.ml  config.ml  core.ml  dune  factoids.ml  factoids.mli  hello.ml  jbuild  ocabot.ml  ocabotlib.mllib  plugin_changelog.ml  social.ml  social.mli
test/: dune  test_changelog.ml
tools/: import_changelog.py  load_dump.ml  repair_utf8.ml
