opam-version: "1.2"
name: "ocabot"
version: "dev"
authors: ["Armael" "c-cube"]
maintainer: ["Armael" "c-cube"]
build: [
    [make]
]
install: [
    ["cp" "ocabot.native" "%{bin}%/ocabot"]
]
build-doc: [ make "doc" ]
build-test: [ make "test" ]
remove: [
    ["rm" "-f" "%{bin}%/ocabot"]
]
depends: [
    "ocamlfind" {build}
    "base-bytes"
    "base-unix"
    "lwt"
    "calculon"
]
tags: [ "irc" "bot" ]
homepage: "https://github.com/c-cube/ocabot"
bug-reports: "https://github.com/c-cube/ocabot/issues"
dev-repo: "https://github.com/c-cube/ocabot"

