opam-version: "2.0"
name: "ocabot"
version: "dev"
synopsis: "IRC bot for #OCaml on freenode"
authors: ["Armael" "c-cube"]
maintainer: ["Armael" "c-cube"]
build: [
    ["dune" "build" "-p" name "-j" jobs]
]
depends: [
    "dune" {build}
    "base-bytes"
    "base-unix"
    "lwt"
    "calculon" { >= "0.5" & < "0.6" }
]
tags: [ "irc" "bot" ]
homepage: "https://github.com/c-cube/ocabot"
bug-reports: "https://github.com/c-cube/ocabot/issues"
dev-repo: "git+https://github.com/c-cube/ocabot"

